Create <footer> element in index.html, added style for footer in style.css and in script.js create findSomething function which been called when button been clicked

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <h1 id="title">🤖 BoredBot 🤖</h1>
     <p id="text">Find something to do</p>
     <button id="search-btn">🔍</button>
-    <!-- 🦾 🦿-->
+    <footer>Coded by Nazim Bayraktar.</footer>
     <script src="script.js"></script>
   </body>
 </html>
